# vgmdb-client

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  example.env  mkdocs.yml  pyproject.toml  tox.ini
.beads/: config.yaml  issues.jsonl  metadata.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
benchmarks/: __init__.py
benchmarks/quality/: __init__.py  adapters.py  compare.py  enrichment.py  fields.py  hufman_client.py  report.py  run.py
docs/: index.md
docs/guides/: authentication.md  client.md  enrichment.md  entities.md
docs/reference/: auth.md  client.md  enrich.md  models.md  parsers.md  transport.md
docs/superpowers/: 2026-06-14_vgmdb_client.md  2026-06-14_vgmdb_client_feature_map.md
docs/superpowers/plans/: 2026-06-18-remaining-entities.md
docs/superpowers/plans/archive/: 2026-06-16-credit-role-normalization.md  2026-06-16-m3-parsers.md
docs/superpowers/vgmdb_client/: 2026-06-14_transport_design.md  2026-06-15_fixtures_design.md  2026-06-15_models_design.md  2026-06-16_client_api_design.md  2026-06-17_enrichment_scoring_design.md  2026-06-17_llm_backend_v2_design.md  2026-06-17_quality_harness_design.md  2026-06-18_auth_token_helper_design.md  2026-06-18_release_polish_design.md  2026-06-18_remaining_entities_design.md
docs/superpowers/vgmdb_client/archive/: 2026-06-16_credit_role_normalization_design.md  2026-06-16_parsers_design.md  2026-06-17_deep_parse_design.md  2026-06-17_more_entities_design.md  2026-06-17_quality_harness_design.md  2026-06-17_rule_based_backend_design.md
openspec/changes/archive/2026-06-14-transport-layer/: design.md  tasks.md
openspec/changes/archive/2026-06-15-models-core/: design.md
openspec/changes/archive/2026-06-16-credit-role-normalization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-m3-parsers/: proposal.md
openspec/changes/archive/2026-06-17-b1-deep-parse/: proposal.md
openspec/changes/archive/2026-06-17-b2-quality-harness/: proposal.md  tasks.md
openspec/changes/archive/2026-06-17-b3-more-entities/: design.md  tasks.md
openspec/changes/archive/2026-06-17-enrichment-scoring/: proposal.md
openspec/changes/archive/2026-06-17-llm-backend-v2/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-rule-based-backend/: proposal.md
openspec/changes/archive/2026-06-18-auth-token-helper/: design.md
openspec/changes/archive/2026-06-18-remaining-entities/: design.md  tasks.md
openspec/changes/auth-token-helper/: proposal.md  tasks.md
openspec/changes/b1-deep-parse/: design.md  tasks.md
openspec/changes/b2-quality-harness/: design.md  proposal.md  tasks.md
openspec/changes/b3-more-entities/: proposal.md  tasks.md
openspec/changes/credit-role-normalization/: tasks.md
openspec/changes/enrichment-scoring/: design.md  tasks.md
openspec/changes/llm-backend-v2/: design.md  tasks.md
openspec/changes/m3-parsers/: design.md  tasks.md
openspec/changes/m4-client-api/: design.md  proposal.md  tasks.md
openspec/changes/m5-fixtures/: design.md  proposal.md  tasks.md
openspec/changes/models-core/: proposal.md  tasks.md
openspec/changes/remaining-entities/: proposal.md
openspec/changes/rule-based-backend/: design.md  tasks.md
openspec/changes/transport-layer/: design.md  proposal.md  tasks.md
openspec/specs/auth/: spec.md
openspec/specs/benchmark/: spec.md
openspec/specs/client/: spec.md
openspec/specs/enrich/: spec.md
openspec/specs/fixtures/: spec.md
openspec/specs/models/: spec.md
openspec/specs/parsers/: spec.md
openspec/specs/transport/: spec.md
scripts/: capture_fixtures.py
src/vgmdb_client/: __init__.py  client.py  errors.py
src/vgmdb_client/auth/: __init__.py  credentials.py  curl.py  errors.py
src/vgmdb_client/client/: __init__.py  _core.py  async_client.py  sync_client.py
src/vgmdb_client/enrich/: __init__.py  backend.py  errors.py  llm.py  models.py  rules.py
src/vgmdb_client/models/: __init__.py  album.py  artist.py  common.py  event.py  organization.py  product.py  roles.py  search.py
src/vgmdb_client/parsers/: __init__.py  _dom.py  album.py  artist.py  errors.py  event.py  organization.py  product.py  search.py
src/vgmdb_client/transport/: __init__.py  async_client.py  config.py  core.py  errors.py  sync_client.py
tests/fixtures/vgmdb/: .gitattributes  README.md  manifest.json
tests/fixtures/vgmdb/albums/: .gitkeep  10000.html  10000.json  18536.html  18536.json  22000.html  22000.json  271.html  271.json  30000.html  30000.json  33000.html  33000.json  4.html  4.json  45000.html  45000.json  5012.html  5012.json  60000.html  60000.json  90000.html  90000.json
tests/fixtures/vgmdb/artists/: 146.html  146.json
tests/fixtures/vgmdb/enrichment/: 10000.json  18536.json  22000.json  271.json  30000.json  33000.json  4.json  45000.json  5012.json  60000.json  90000.json
tests/fixtures/vgmdb/events/: 149.html  149.json
tests/fixtures/vgmdb/organizations/: 17.html  17.json
tests/fixtures/vgmdb/products/: 262.html  262.json
tests/fixtures/vgmdb/search/: .gitkeep  multi-hit.html  multi-hit.json  near-empty.html  (+1 more)
tests/support/: __init__.py  fixtures.py
tests/unit_tests/: test_client.py  test_enrichment_goldens.py  test_errors.py  test_fixtures.py
tests/unit_tests/auth/: test_client_credentials.py  test_credentials.py  test_curl.py
tests/unit_tests/benchmark/: test_compare.py  test_enrichment.py  test_fields_adapters.py  test_hufman_client.py  test_report.py  test_smoke.py
tests/unit_tests/client/: test_client.py  test_core.py
tests/unit_tests/enrich/: test_enrich.py  test_rules.py
tests/unit_tests/models/: test_album.py  test_common.py  test_conventions.py  test_entities.py  test_event.py  test_roles.py  test_search.py
tests/unit_tests/parsers/: test_album.py  test_artist.py  test_dom.py  test_event.py  test_organization.py  test_product.py  test_search.py
tests/unit_tests/transport/: test_async_client.py  test_config.py  test_core.py  test_errors.py  test_public_api.py  test_sync_client.py
(+21 files in other folders)
