[project]
name = "vgmdb-client"
version = "1.0.0"
description = "A tentative client for vgmdb.net"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cachetools>=7.0.5",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgmdb_client"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov src"
testpaths = ["tests",]
required_plugins = ["pytest-cov"]
