[project]
name = "vgmdb-client"
version = "1.0.0"
description = "A typed, sync + async Python client for vgmdb.net (the video game music database)."
authors = [{ name = "HOZHENWAI", email = "hozhenwai@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["vgmdb", "video-game-music", "anime-music", "discography", "api-client", "pydantic", "httpx"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.5",
    "pydantic>=2.7",
    "lxml>=5.0",
]

[project.urls]
Homepage = "https://HOZHENWAI.github.io/vgmdb-client/"
Repository = "https://github.com/HOZHENWAI/vgmdb-client"
Documentation = "https://HOZHENWAI.github.io/vgmdb-client/"

[dependency-groups]
dev = [
    "python-dotenv>=1.0",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.33.4",
    "deptry>=0.25.1",
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
    "respx>=0.21",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgmdb_client"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# The parsers wrap lxml, which ships no type information. Relax the "Any from an
# untyped import" check for these modules only; the rest of the package stays strict.
[[tool.mypy.overrides]]
module = "vgmdb_client.parsers.*"
disallow_any_unimported = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["lxml", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

